<resources>
    <string name="app_name">Fancydice</string>
    <string name="action_settings">Settings</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_8">8</string>
    <string name="_10">10</string>
    <string name="_12">12</string>
    <string name="_20">20</string>
    <string name="_100">100</string>
    <string name="ok">OK</string>
    <string name="custom">Custom</string>
    <string name="custom_sides">Custom Sides</string>
    <string name="_0">0</string>
    <string name="customSidesToast">Please enter a number of sides.</string>
    <string name="total">Total</string>
    <string name="rightArrow"><![CDATA[>]]></string>
    <string name="leftArrow"><![CDATA[<]]></string>
    <string name="cutomSidesMinimumToast">Dice have at least one side.</string>
    <string name="tooManyDropped">Too many dice are dropped.  Resetting drop settings.</string>
    <string name="strikethrough">Strikethrough</string>
</resources>
