<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mwapp.ron.fancydice.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/d4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="rollButtonClicked"
                    android:text="@string/_4" />

                <Button
                    android:id="@+id/d6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="rollButtonClicked"
                    android:text="@string/_6"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/d8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="rollButtonClicked"
                    android:text="@string/_8" />

                <Button
                    android:id="@+id/d10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="rollButtonClicked"
                    android:text="@string/_10" />

                <Button
                    android:id="@+id/d12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="rollButtonClicked"
                    android:text="@string/_12" />

                <Button
                    android:id="@+id/d20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="rollButtonClicked"
                    android:text="@string/_20" />

                <Button
                    android:id="@+id/d100"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="rollButtonClicked"
                    android:text="@string/_100" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/sidesAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/custom_sides"
                        android:inputType="number" />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="customDiceButtonClicked"
                        android:text="@string/ok" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/roll20text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="4d6"
                        android:inputType="textPersonName" />

                    <Button
                        android:id="@+id/roll20ok"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="roll20DiceButtonClicked"
                        android:text="@string/ok" />

                </LinearLayout>

                <Button
                    android:id="@+id/dropButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="dropButtonClicked"
                    android:text="Drop High/Low..." />

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/totalText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/total"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="16dip"
                        android:paddingTop="0dp"
                        android:text="@string/_0"
                        android:textAlignment="center"
                        android:textColor="?android:attr/colorForeground"
                        android:textSize="48sp"
                        android:textStyle="bold" />

                    <TableLayout
                        android:id="@+id/individualDice"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/_0"
                                android:textAlignment="center"
                                android:textColor="?android:attr/colorForeground"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/_0"
                                android:textAlignment="center"
                                android:textColor="?android:attr/colorForeground"
                                android:textSize="18sp" />
                        </TableRow>

                    </TableLayout>

                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/decrementButton"
                        android:layout_width="32dip"
                        android:layout_height="36dip"
                        android:layout_weight="1"
                        android:onClick="decrementNumDice"
                        android:text="@string/leftArrow" />

                    <TextView
                        android:id="@+id/numDice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="1"
                        android:textAlignment="center"
                        android:textColor="?attr/colorPrimary" />

                    <Button
                        android:id="@+id/incrementButton"
                        android:layout_width="32dip"
                        android:layout_height="36dip"
                        android:layout_weight="1"
                        android:onClick="incrementNumDice"
                        android:text="@string/rightArrow" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>